fix: eliminando css pro_show del elemento id=productos

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             </div>
         </form>
     </div>
-    <div id="productos" class="pro_ pro_show">
+    <div id="productos" class="pro_">
         <section class="container__products">
             <div id="container-vector-ondas" class="container-ondas">
                 <img class="vector-ondas" src="assets/img/productos/ondas.png" alt="">
